<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="first_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_place"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="45sp" />

    <TextView
        android:id="second_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_place"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="45sp" />

    <TextView
        android:id="third_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_place"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="45sp" />

    <TextView
        android:id="fourth_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fourth_place"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="45sp" />

</TableLayout>
