<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/profile_pic"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/@string/second_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/@string/third_place"
        android:layout_marginBottom="26dp"
        android:text="@string/score"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/@string/first_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/@string/second_place"
        android:layout_alignBottom="@+id/@string/second_place"
        android:layout_toRightOf="@+id/@string/third_place"
        android:text="@string/score_int"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button2"
        android:padding="0dp"
        android:text="@string/feed_page" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:layout_above="@+id/name"
        android:layout_alignBottom="@id/button1"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/ranking_page" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@+id/button3"
        android:text="@string/profile_page" />

    <TextView
        android:id="@+id/@string/third_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="154dp"
        android:text="@string/account_count"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/@string/second_place"
        android:layout_alignLeft="@+id/button2"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="14dp"
        android:text="@string/profile_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/@string/third_place"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="78dp"
        android:text="@string/achievements"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/name"
        android:layout_toLeftOf="@+id/textView5"
        android:contentDescription="@string/profile_pic"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/@string/second_place"
        android:layout_toLeftOf="@+id/button3"
        android:text="@string/rank"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <com.facebook.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="38dp"
        android:layout_toLeftOf="@+id/@string/first_place"
        android:text="Login" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/@string/third_place"
        android:layout_alignBottom="@+id/@string/third_place"
        android:layout_alignRight="@+id/textView5"
        android:text="TextView" />

</RelativeLayout>